[tool.poetry]
name = "gym-admin-model"
version = "0.1.0"
description = ""
authors = ["Kibishicoder <kibishiart@gmail.com>"]
readme = "README.md"
packages = [{include = "gym_admin_model"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
